# svg-to-lottie-converter

./: pyproject.toml  setup.py
svg2lottie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
svg2lottie/svg2lottie.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
svg2lottie/svg_to_lottie_converter.egg-info/: PKG-INFO  SOURCES.txt
