[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "svg2lottie"
version = "1.0.0"
authors = [
  { name="LottieFiles", email="support@lottiefiles.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7,<3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LottieFiles/svg-to-lottie-converter"
"Bug Tracker" = "https://github.com/LottieFiles/svg-to-lottie-converter/issues"